Se elimina codigo superfluo provisto con la plantilla, se realizan ajustes a las margenes y el ajustes de las images a la barra de botones sociales

--- a/default.css
+++ b/default.css
@@ -332,7 +332,7 @@
 	#social_network ul
 	{
 		background: rgba(255,255,255, 0.5);
-		padding: 2em 1em;
+		padding: 2.5em 1em;
 	}
 	
 	#social_network li
@@ -342,6 +342,8 @@
 	#social_network li, #social_network img
 	{
 		display: inline;
+		margin-left: 1em;
+		margin-right: 1em;
 	}
 
 /*********************************************************************************/
