--- a/default.css
+++ b/default.css
@@ -253,10 +253,10 @@
 
 	#header
 	{
-		position: relative;
+		position: fixed;
 		float: left;
 		width: 300px;
-		padding: 3em 0em;
+		padding: 2em 0em;
 	}
 
 /*********************************************************************************/
