Se actualiza informacion mostrada en la pagina de logros academicos

--- a/default.css
+++ b/default.css
@@ -163,7 +163,7 @@
 		float: left;
 		position: relative;
 		width: 80px;
-		height: 70px;
+		height: 80px;
 		margin: 0.5em 1.5em 0em 0.5em;
 		padding: 1.5em 0em 1.5em 0em;
 		box-shadow: 0px 0px 0px 5px rgba(255,255,255,0.1);
@@ -196,10 +196,12 @@
 		margin-top: -5px;
 		font-size: 1.8em;
 		font-weight: 700;
+		color: #2D2D2D;
 	}
 	
 	ul.style1 .date a
 	{
+		color: #2D2D2D;
 	}
 	
 	ul.style1 .date a:hover
@@ -362,7 +364,7 @@
 		width: 800px;
 		padding: 1em 50px 1em 50px;
 		background: #FFF;
-		border-top: 50px solid #2980b9;
+		border-top: 35px solid #2980b9;
 		text-align: center;
 	}
 	
@@ -374,8 +376,12 @@
 	{
 		overflow: hidden;
 		margin-bottom: 3em;
-		padding-top: 5em;
-		border-top: 1px solid rgba(0,0,0,0.08);
+		padding-top: 1em;
+	}
+
+	#featured h1
+	{
+		margin-bottom: 0.5em;
 	}
 
 /*********************************************************************************/
