--- a/default.css
+++ b/default.css
@@ -1,3 +1,11 @@
+/*Diseño creado por Sebastian Reyes Espinosa, basado en la plantilla
+publica creada por TEMPLATED - http://templated.co
+Released for free under the Creative Commons Attribution License
+
+Creado 2015-01-19
+Ultima actualizacion 2015-01-23
+Version 1.2.34*/
+
 	html, body
 	{
 		height: 100%;
